Changed View Collection to View Service

--- a/sections/list-collections-section.liquid
+++ b/sections/list-collections-section.liquid
@@ -16,7 +16,7 @@
             <div class="card-text rte">
               {{ collection.description | truncatewords: 20 }}
             </div>
-            <a href="/collections/{{ collection.handle }}" class="btn btn-primary mt-auto">View Collection</a>
+            <a href="/collections/{{ collection.handle }}" class="btn btn-primary mt-auto">View Services</a>
           </div>
         </div>
       </div>
