--- a/sections/list-collections-section.liquid
+++ b/sections/list-collections-section.liquid
@@ -12,7 +12,7 @@
             {% endif %}
           </a>
           <div class="card-body d-flex flex-column">
-            <h2 class="card-title h5">{{ collection.title }}</h2>
+            <h2 class="card-title h5" style="font-size: {{ section.settings.title_font_size }}px; line-height: {{ section.settings.title_line_height }}; text-transform: {{ section.settings.title_text_transform }};">{{ collection.title }}</h2>
             <div class="card-text rte">
               {{ collection.description | truncatewords: 20 }}
             </div>
@@ -33,6 +33,49 @@
       "id": "subheading_text",
       "label": "Subheading Text",
       "default": "Discover our collection of"
+    },
+    {
+      "type": "range",
+      "id": "title_font_size",
+      "label": "Card Title Font Size",
+      "min": 12,
+      "max": 48,
+      "step": 1,
+      "unit": "px",
+      "default": 20
+    },
+    {
+      "type": "range",
+      "id": "title_line_height",
+      "label": "Card Title Line Height",
+      "min": 1,
+      "max": 3,
+      "step": 0.1,
+      "default": 1.2
+    },
+    {
+      "type": "select",
+      "id": "title_text_transform",
+      "label": "Card Title Text Transform",
+      "options": [
+        {
+          "value": "none",
+          "label": "None"
+        },
+        {
+          "value": "uppercase",
+          "label": "Uppercase"
+        },
+        {
+          "value": "lowercase",
+          "label": "Lowercase"
+        },
+        {
+          "value": "capitalize",
+          "label": "Capitalize"
+        }
+      ],
+      "default": "none"
     }
   ],
   "presets": [
